[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deeptlf"
version = "0.2.0"
description = "Deep Tabular Learning Framework"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Vadim Borisov", email = "vadim.borisov@uni-tuebingen.de"}
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
keywords = ["deep-learning", "tabular-data", "machine-learning", "neural-networks"]
dependencies = [
    "numpy",
    "torch",
    "scikit-learn",
    "xgboost",
    "tqdm"
]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/unnir/deeptlf"

[tool.hatch.build]
packages = ["deeptlf"]
